--- a/elessar/package.json
+++ b/elessar/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.11.0",
     "react-native": "^0.62.2",
+    "react-native-form-validator": "^0.3.2",
     "react-router-native": "^5.1.2"
   },
   "devDependencies": {
