--- a/elessar/package.json
+++ b/elessar/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "react": "16.11.0",
     "react-native": "^0.62.2",
+    "react-native-elements": "^2.0.0",
     "react-native-form-validator": "^0.3.2",
-    "react-router-native": "^5.1.2"
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.3.9",
+    "react-router-native": "^5.1.2",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
