--- a/elessar/package.json
+++ b/elessar/package.json
@@ -10,10 +10,21 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.3.0",
+    "@react-navigation/stack": "^5.3.3",
+    "apollo": "^2.27.4",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^15.0.0",
     "react": "16.11.0",
     "react-native": "^0.62.2",
     "react-native-elements": "^2.0.0",
     "react-native-form-validator": "^0.3.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^1.0.0",
+    "react-native-screens": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
     "react-router-native": "^5.1.2",
