--- a/elessar/package.json
+++ b/elessar/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.5.0",
     "@react-navigation/native": "^5.3.0",
     "@react-navigation/stack": "^5.3.3",
     "apollo": "^2.27.4",
     "apollo-boost": "^0.4.7",
+    "formik": "^2.1.4",
     "graphql": "^15.0.0",
+    "moment": "^2.25.3",
     "react": "16.11.0",
     "react-native": "^0.62.2",
+    "react-native-date-picker": "^2.7.10",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^2.0.0",
     "react-native-form-validator": "^0.3.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -28,7 +34,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
     "react-router-native": "^5.1.2",
-    "subscriptions-transport-ws": "^0.9.16"
+    "subscriptions-transport-ws": "^0.9.16",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
